overflow problem solved

--- a/cv.css
+++ b/cv.css
@@ -31,7 +31,6 @@ html, body{
     cursor: default;
     font-family: "Montserrat", sans-serif;
     font-size: 16px;
-    overflow: hidden;
 }
 
 nav{
